get rid of required keyword (nearly) and @TypeScriptFactory annotation